--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
-        android:text="@string/calc"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
@@ -63,6 +62,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
         android:onClick="btnC"
         android:text="@string/c"
         android:textColor="@android:color/holo_red_dark"
