--- a/app/src/main/res/layout/item_histo.xml
+++ b/app/src/main/res/layout/item_histo.xml
@@ -30,9 +30,10 @@
             style="@android:style/Widget.Material.Light.ImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/todo"
+            android:onClick="btnDel"
             android:tint="@android:color/holo_blue_dark"
-            app:srcCompat="@android:drawable/ic_input_delete"
-            android:contentDescription="@string/todo" />
+            app:srcCompat="@android:drawable/ic_input_delete" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
