--- a/app/src/main/res/layout/item_histo.xml
+++ b/app/src/main/res/layout/item_histo.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,19 +19,18 @@
             android:id="@+id/itemResult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right"
+            android:gravity="end"
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <ImageButton
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imageDeletei"
-            style="@android:style/Widget.Material.Light.ImageButton"
+            style="@android:style/Widget.ImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/todo"
-            android:onClick="btnDel"
+            android:focusable="auto"
+            android:onClick="btnDelete"
             android:tint="@android:color/holo_blue_dark"
             app:srcCompat="@android:drawable/ic_input_delete" />
-
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
